--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href=""><img src="/includes/img/poopnplop-logo.png" alt="Logo"></a>
+			<a class="navbar-brand" href=""><img src="includes/img/poopnplop-logo.png" alt="Logo"></a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,7 +47,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<img class="front-sad-poo" src="/includes/img/sad-poo.png" alt="happy logo">
+				<img class="front-sad-poo" src="includes/img/sad-poo.png" alt="happy logo">
 			</div>
 			<div id="top-section-app" class="col-md-6">
 				<h2 id = "main-heading" class="heading wow">feeling a <b>big <span>one</span></b> coming?</h2>
