--- a/index-forgot.html
+++ b/index-forgot.html
@@ -48,39 +48,43 @@
 <section id="book">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
-				<!-- Where all the magic happens -->
-                <!-- FORGOT PASSWORD FORM -->
-                <div class="text-center" style="padding:50px 0">
-                    <div class="logo">forgot password</div>
-                    <!-- Main Form -->
-                    <div class="login-form-1">
-                        <form id="forgot-password-form" class="text-left">
-                            <div class="etc-login-form">
-                                <p>When you fill in your registered email address, you will be sent instructions on how to reset your password.</p>
-                            </div>
-                            <div class="login-form-main-message"></div>
-                            <div class="main-login-form">
-                                <div class="login-group">
-                                    <div class="form-group">
-                                        <label for="fp_email" class="sr-only">Email address</label>
-                                        <input type="text" class="form-control" id="fp_email" name="fp_email" placeholder="email address">
-                                    </div>
-                                </div>
-                                <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
-                            </div>
-                            <div class="etc-login-form">
-                                <p>already have an account? <a href="index-login.html">login here</a></p>
-                                <p>new user? <a href="index-register.html">create new account</a></p>
-                            </div>
-                        </form>
+			<div class="col-md-3">
+            </div>
+            <form action="" method="" class="mail-form">
+                <div class="col-md-6">
+                   <div class="row">
+                        <div class="col-sm-2">
+                        </div>
+                        <div class="col-sm-8">
+                            <h1 class="register-title" id = "lost-title">lost password</h1>
+                        </div>
+                        <div class="col-sm-2">
+                        </div>
                     </div>
-                    <!-- end:Main Form -->
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input name="name" type="text" class="form-control" placeholder="email" data-validation="email">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a class="form-link" href="index-register.html">make an account</a>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="submit" class="btn btn-login contact-button" value="Send">
+                        </div>
+                        <div class="col-sm-4">
+                            <a class="form-link" href="index-login.html">login</a>
+                        </div>
+                    </div>
                 </div>
-			</div>
-		</div>
-	</div>
+            </form>
+            <div class="col-md-3">
+            </div>
+        </div>
+    </div>
 </section>
+    
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
 <script src="includes/js/jquery-1.11.1.min.js"></script>
 <script src="includes/js/owl.carousel.js"></script>
