--- a/index-login.html
+++ b/index-login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- University of Toronto Hacks 2017 - Jae Chung, Sabina Shin, Jamie Kim, Ryan Gu - What's in you Fridge?-->
+<!-- University of Toronto Hacks 2017 - Jae Chung, Sabina Shin, Jamie Kim, Ryan Gu - What's in your Fridge?-->
 <head>
 	<meta charset="UTF-8">
 	<title>Jaehyun Chung | Web Layout Bruh</title>
@@ -48,45 +48,48 @@
 <section id="book">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
-				<!-- Where all the magic happens -->
-                <!-- LOGIN FORM -->
-                <div class="text-center" style="padding:50px 0">
-                    <div class="logo">login</div>
-                    <!-- Main Form -->
-                    <div class="login-form-1">
-                        <form id="login-form" class="text-left">
-                            <div class="login-form-main-message"></div>
-                            <div class="main-login-form">
-                                <div class="login-group">
-                                    <div class="form-group">
-                                        <label for="lg_username" class="sr-only">Username</label>
-                                        <input type="text" class="form-control" id="lg_username" name="lg_username" placeholder="username">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="lg_password" class="sr-only">Password</label>
-                                        <input type="password" class="form-control" id="lg_password" name="lg_password" placeholder="password">
-                                    </div>
-                                    <div class="form-group login-group-checkbox">
-                                        <input type="checkbox" id="lg_remember" name="lg_remember">
-                                        <label for="lg_remember">remember</label>
-                                    </div>
-                                </div>
-                                <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
-                            </div>
-                            <div class="etc-login-form">
-                                <p>forgot your password? <a href="index-forgot.html">click here</a></p>
-                                <p>new user? <a href="index-register.html">create new account</a></p>
-                            </div>
-                        </form>
+			<div class="col-md-3">
+            </div>
+            <form action="" method="" class="mail-form">
+                <div class="col-md-6">
+                   <div class="row">
+                        <div class="col-sm-4">
+                        </div>
+                        <div class="col-sm-4">
+                            <h1 class="register-title" id = "login-title">Login</h1>
+                        </div>
+                        <div class="col-sm-4">
+                        </div>
                     </div>
-                    <!-- end:Main Form -->
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input name="name" type="text" class="form-control" placeholder="username" data-validation="required">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input name="name" type="text" class="form-control" placeholder="password" data-validation="password">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a class="form-link" href="index-register.html">make an account</a>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="submit" class="btn btn-login contact-button" value="Send">
+                        </div>
+                        <div class="col-sm-4">
+                            <a class="form-link" href="index-forgot.html">forgot password</a>
+                        </div>
+                    </div>
                 </div>
-                </div>
-			</div>
-		</div>
-	</div>
+            </form>
+            <div class="col-md-3">
+            </div>
+        </div>
+    </div>
 </section>
+    
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
 <script src="includes/js/jquery-1.11.1.min.js"></script>
 <script src="includes/js/owl.carousel.js"></script>
