--- a/index-register.html
+++ b/index-register.html
@@ -48,62 +48,57 @@
 <section id="book">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
-				<!-- Where all the magic happens -->
-                <!-- REGISTRATION FORM -->
-                <div class="text-center" style="padding:50px 0">
-                    <div class="logo">register</div>
-                    <!-- Main Form -->
-                    <div class="login-form-1">
-                        <form id="register-form" class="text-left">
-                            <div class="login-form-main-message"></div>
-                            <div class="main-login-form">
-                                <div class="login-group">
-                                    <div class="form-group">
-                                        <label for="reg_username" class="sr-only">Email address</label>
-                                        <input type="text" class="form-control" id="reg_username" name="reg_username" placeholder="username">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="reg_password" class="sr-only">Password</label>
-                                        <input type="password" class="form-control" id="reg_password" name="reg_password" placeholder="password">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="reg_password_confirm" class="sr-only">Password Confirm</label>
-                                        <input type="password" class="form-control" id="reg_password_confirm" name="reg_password_confirm" placeholder="confirm password">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="reg_email" class="sr-only">Email</label>
-                                        <input type="text" class="form-control" id="reg_email" name="reg_email" placeholder="email">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="reg_fullname" class="sr-only">Full Name</label>
-                                        <input type="text" class="form-control" id="reg_fullname" name="reg_fullname" placeholder="full name">
-                                    </div>
-                                    <div class="form-group login-group-checkbox">
-                                        <input type="radio" class="" name="reg_gender" id="male" placeholder="username">
-                                        <label for="male">male</label>
-                                        <input type="radio" class="" name="reg_gender" id="female" placeholder="username">
-                                        <label for="female">female</label>
-                                    </div>
-                                    <div class="form-group login-group-checkbox">
-                                        <input type="checkbox" class="" id="reg_agree" name="reg_agree">
-                                        <label for="reg_agree">i agree with <a href="#">terms</a></label>
-                                    </div>
-                                </div>
-                                <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
-                            </div>
-                            <div class="etc-login-form">
-                                <p>already have an account? <a href="index-login.html">login here</a></p>
-                            </div>
-                        </form>
+			<div class="col-md-3">
+            </div>
+            <form action="" method="" class="mail-form">
+                <div class="col-md-6">
+                   <div class="row">
+                        <div class="col-sm-4">
+                        </div>
+                        <div class="col-sm-4">
+                            <h1 class="register-title">Register</h1>
+                        </div>
+                        <div class="col-sm-4">
+                        </div>
                     </div>
-                    <!-- end:Main Form -->
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input name="name" type="text" class="form-control" placeholder="username" data-validation="reg_username">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input name="email" type="text" class="form-control" placeholder="email" data-validation="reg_email">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input name="name" type="text" class="form-control" placeholder="password" data-validation="reg_password">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input name="email" type="text" class="form-control" placeholder="confirm password" data-validation="reg_confirm_password">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a class="form-link" href="index-login.html">login</a>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="submit" class="btn btn-login contact-button" value="Send">
+                        </div>
+                        <div class="col-sm-4">
+                        </div>
+                    </div>
                 </div>
-                </div>
-			</div>
-		</div>
-	</div>
+            </form>
+            <div class="col-md-3">
+            </div>
+        </div>
+    </div>
 </section>
+    
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
 <script src="includes/js/jquery-1.11.1.min.js"></script>
 <script src="includes/js/owl.carousel.js"></script>
