--- a/index-login.html
+++ b/index-login.html
@@ -63,12 +63,12 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="name" type="text" class="form-control" placeholder="username" data-validation="required">
+                            <input name="username" type="text" class="form-control" placeholder="username" data-validation="required">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="name" type="text" class="form-control" placeholder="password" data-validation="password">
+                            <input name="password" type="text" class="form-control" placeholder="password" data-validation="password">
                         </div>
                     </div>
                     <div class="row">
