--- a/index-poop.html
+++ b/index-poop.html
@@ -5,8 +5,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Jaehyun Chung | Web Layout Bruh</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="includes/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="includes/css/bootstrap.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,53 +37,15 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right main-nav">
-				<li><a href="index.html" class="login-button">home</a></li>
+				<li><a href="index-login.html" class="login-button">login</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
 </nav>
 
-<section id="book">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3">
-            </div>
-            <form action="" method="" class="mail-form">
-                <div class="col-md-6">
-                   <div class="row">
-                        <div class="col-sm-2">
-                        </div>
-                        <div class="col-sm-8">
-                            <h1 class="register-title" id = "lost-title">lost password</h1>
-                        </div>
-                        <div class="col-sm-2">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <input name="email" type="text" class="form-control" placeholder="email" data-validation="email">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <a class="form-link" href="index-register.html">make an account</a>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="submit" class="btn btn-login contact-button" value="Send">
-                        </div>
-                        <div class="col-sm-4">
-                            <a class="form-link" href="index-login.html">login</a>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <div class="col-md-3">
-            </div>
-        </div>
-    </div>
+<section class="find-poop" class="container">
 </section>
     
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
 <script src="includes/js/jquery-1.11.1.min.js"></script>
 <script src="includes/js/owl.carousel.js"></script>
 <script src="includes/js/lightbox.min.js"></script>
@@ -101,6 +61,4 @@
 
 
 </body>
-
-<!-- Mirrored from gifts.coresolutions.ca/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 18 Jan 2017 08:11:17 GMT -->
 </html>
