verification types login

--- a/index-forgot.html
+++ b/index-forgot.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="email" type="text" class="form-control" placeholder="email" data-validation="email">
+                            <input name="email" type="email" class="form-control" placeholder="email" data-validation="email">
                         </div>
                     </div>
                     <div class="row">
