--- a/index-login.html
+++ b/index-login.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="password" type="text" class="form-control" placeholder="password" data-validation="password">
+                            <input name="password" type="password" class="form-control" placeholder="password" data-validation="password">
                         </div>
                     </div>
                     <div class="row">
