--- a/index-register.html
+++ b/index-register.html
@@ -68,17 +68,17 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="email" type="text" class="form-control" placeholder="email" data-validation="reg_email">
+                            <input name="email" type="email" class="form-control" placeholder="email" data-validation="reg_email">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="password" type="text" class="form-control" placeholder="password" data-validation="reg_password">
+                            <input name="password" type="password" class="form-control" placeholder="password" data-validation="reg_password">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="confirm-password" type="text" class="form-control" placeholder="confirm password" data-validation="reg_confirm_password">
+                            <input name="confirm-password" type="password" class="form-control" placeholder="confirm password" data-validation="reg_confirm_password">
                         </div>
                     </div>
                     <div class="row">
