--- a/index-main.html
+++ b/index-main.html
@@ -43,7 +43,17 @@
 	</div><!-- /.container-fluid -->
 </nav>
 
-<section class="main" class="container">
+<section class="main">
+    <div class="container-fluid">
+		<div class="row">
+            <div class="col-md-6" id = "need-to-poo" >
+                <img src = "" class="main-need-poo">
+            </div>
+            <div class="col-md-6" id = "took-a-poo" >
+                <img src = "" class="took-a-poo">
+            </div>
+        </div>
+    </div>
 </section>
     
 <script src="includes/js/jquery-1.11.1.min.js"></script>
