--- a/index-main.html
+++ b/index-main.html
@@ -37,7 +37,7 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right main-nav">
-				<li><a href="index-login.html" class="login-button">login</a></li>
+				<li><a href="" class="login-button">logout</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
