--- a/index-main.html
+++ b/index-main.html
@@ -47,10 +47,10 @@
     <div class="container-fluid">
 		<div class="row">
             <div class="col-md-6" id = "need-to-poo" >
-                <img src = "" class="main-need-poo">
+                <a href="index.html"><img src = "includes/img/need-to-poo.png" class="main-need-poo"></a>
             </div>
             <div class="col-md-6" id = "took-a-poo" >
-                <img src = "" class="took-a-poo">
+                <a href="index.html"><img src = "includes/img/took-a-poo.png" class="took-a-poo"></a>
             </div>
         </div>
     </div>
