--- a/index-need-poop.html
+++ b/index-need-poop.html
@@ -43,7 +43,17 @@
 	</div><!-- /.container-fluid -->
 </nav>
 
-<section class="find-poop" class="container">
+<section class="main">
+    <div class="container-fluid">
+		<div class="row">
+            <div class="col-md-6" id = "need-to-poo" >
+                <a href="index.html"><img src = "includes/img/need-to-poo.png" class="main-need-poo"></a>
+            </div>
+            <div class="col-md-6" id = "took-a-poo" >
+                <a href="index.html"><img src = "includes/img/took-a-poo.png" class="took-a-poo"></a>
+            </div>
+        </div>
+    </div>
 </section>
     
 <script src="includes/js/jquery-1.11.1.min.js"></script>
