--- a/index-need-poop.html
+++ b/index-need-poop.html
@@ -37,7 +37,7 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right main-nav">
-				<li><a href="index-login.html" class="login-button">login</a></li>
+				<li><a href="index.html" class="login-button">logout</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
@@ -46,16 +46,37 @@
 <section class="main">
     <div class="container-fluid">
 		<div class="row">
-            <div class="col-md-6" id = "need-to-poo" >
-                <a href="index.html"><img src = "includes/img/need-to-poo.png" class="main-need-poo"></a>
+            <div class="col-md-6" id="need-to-poo-map">
+                <div id="map" style="width:100%;height:75%"></div>
             </div>
-            <div class="col-md-6" id = "took-a-poo" >
-                <a href="index.html"><img src = "includes/img/took-a-poo.png" class="took-a-poo"></a>
+            <div class="col-md-6" id="took-a-poo-map">
+                
             </div>
         </div>
     </div>
 </section>
-    
+
+<script>
+function myMap() {
+  var myCenter = new google.maps.LatLng(51.508742,-0.120850);
+  var mapCanvas = document.getElementById("map");
+  var mapOptions = {center: myCenter, zoom: 16};
+  var map = new google.maps.Map(mapCanvas, mapOptions);
+    map.setCenter(new google.maps.LatLng(43.663570, -79.395531), 13);
+    //map.setZoom(50);
+  var marker = new google.maps.Marker({position:myCenter});
+  marker.setMap(map);
+  google.maps.event.addListener(marker,'click',function() {
+    var infowindow = new google.maps.InfoWindow({
+      content:"This location was rated: 4.2 based on 29 ratings."
+    });
+  infowindow.open(map,marker);
+  });
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+
 <script src="includes/js/jquery-1.11.1.min.js"></script>
 <script src="includes/js/owl.carousel.js"></script>
 <script src="includes/js/lightbox.min.js"></script>
