--- a/index-register.html
+++ b/index-register.html
@@ -24,11 +24,11 @@
 	<script>
 	$(document).ready(function(){
     var from,to,subject,text;
-    $("#sendemail").click(function(){
-        e=$("#email").val();
-        p=$("#password").val();
+    $("#send_email").click(function(){
+        e=$("#e").val();
+        p=$("#p").val();
         $("#message").text("Sending E-mail...");
-        $.get("http://localhost:3000/send",{e:email, p:password},function(data){
+        $.get("http://localhost:3000/send",{e:e, p:p},function(data){
 		      if(data=="sent")
 		      {
 		          $("#message").empty().html("<p>Email is been sent at "+e+". Your password is "+p+". Please check your inbox !</p>");
@@ -85,12 +85,12 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="email" type="email" class="form-control" id="email" placeholder="email" data-validation="reg_email">
+                            <input name="email" type="email" class="form-control" id="e" placeholder="email" data-validation="reg_email">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="password" type="password" class="form-control" id="password" placeholder="password" data-validation="reg_password">
+                            <input name="password" type="password" class="form-control" id="p" placeholder="password" data-validation="reg_password">
                         </div>
                     </div>
                     <div class="row">
@@ -98,14 +98,17 @@
                             <a class="form-link" href="index-login.html">login</a>
                         </div>
                         <div class="col-sm-4">
-                            <input type="submit" class="btn btn-login contact-button" id="sendemail" value="Send">
-                        </div>
+                            <!-- <input type="submit" class="btn btn-login contact-button" id="send_email" value="Send"> -->
+														<button id="send_email">Register Now</button><br>
+														<!-- REMEMBER TO PROMPT USER TO GO CHECK THEIR EMAIL -->
+														<!-- CURRENTLY THE PROMPT IS BROKEN, REFER TO SCRIPT ABOVE -->
+												</div>
                         <div class="col-sm-4">
+													<span id="message"></span>
                         </div>
                     </div>
                 </div>
             </form>
-						<span id="message"></span>
             <div class="col-md-3">
             </div>
         </div>
