--- a/index-login.html
+++ b/index-login.html
@@ -4,7 +4,7 @@
 <!-- University of Toronto Hacks 2017 - Jae Chung, Sabina Shin, Jamie Kim, Ryan Gu - What's in your Fridge?-->
 <head>
 	<meta charset="UTF-8">
-	<title>Jaehyun Chung | Web Layout Bruh</title>
+	<title>poopnplop</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="includes/css/normalize.css">
@@ -63,7 +63,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input name="username" type="text" class="form-control" placeholder="username" data-validation="required">
+                            <input name="email" type="email" class="form-control" placeholder="email" data-validation="email">
                         </div>
                     </div>
                     <div class="row">
