--- a/index-main.html
+++ b/index-main.html
@@ -4,7 +4,7 @@
 <!-- University of Toronto Hacks 2017 - Jae Chung, Sabina Shin, Jamie Kim, Ryan Gu - What's in you Fridge?-->
 <head>
 	<meta charset="UTF-8">
-	<title>Jaehyun Chung | Web Layout Bruh</title>
+	<title>poopnplop</title>
 	<link rel="stylesheet" type="text/css" href="includes/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="includes/css/bootstrap.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,10 +47,10 @@
     <div class="container-fluid">
 		<div class="row">
             <div class="col-md-6" id = "need-to-poo" >
-                <a href="index.html"><img src = "includes/img/need-to-poo.png" class="main-need-poo"></a>
+                <a href="index-took-poop.html"><img src = "includes/img/need-to-poo.png" class="main-need-poo"></a>
             </div>
             <div class="col-md-6" id = "took-a-poo" >
-                <a href="index.html"><img src = "includes/img/took-a-poo.png" class="took-a-poo"></a>
+                <a href="index-need-poop.html"><img src = "includes/img/took-a-poo.png" class="took-a-poo"></a>
             </div>
         </div>
     </div>
