--- a/index-register.html
+++ b/index-register.html
@@ -4,7 +4,7 @@
 <!-- University of Toronto Hacks 2017 - Jae Chung, Sabina Shin, Jamie Kim, Ryan Gu - What's in you Fridge?-->
 <head>
 	<meta charset="UTF-8">
-	<title>Jaehyun Chung | Web Layout Bruh</title>
+	<title>poopnplop</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="includes/css/normalize.css">
@@ -59,11 +59,6 @@
                             <h1 class="register-title">Register</h1>
                         </div>
                         <div class="col-sm-4">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <input name="name" type="text" class="form-control" placeholder="username" data-validation="reg_username">
                         </div>
                     </div>
                     <div class="row">
