--- a/index-took-poop.html
+++ b/index-took-poop.html
@@ -37,26 +37,63 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right main-nav">
-				<li><a href="index-login.html" class="login-button">login</a></li>
+				<li><a href="index.html" class="login-button">logout</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
 </nav>
 
-<section id="book">
-	<div class="container">
+<section class="main">
+    <div class="container-fluid">
 		<div class="row">
-			<div class="col-md-6">
-				<img class="front-sad-poo" src="includes/img/sad-poo.png" alt="happy logo">
-			</div>
-			<div id="top-section-app" class="col-md-6">
-				<h2 id = "main-heading" class="heading wow">feeling a <b>big <span>one</span></b> coming?</h2>
-                <h3 id = "main-subheading" class="subheading wow">find the most <strong>optimal</strong><br><span>place to poop on campus</span></h3>
-                <h2 id = "main-heading" class="heading wow" style="margin-top: 30px; font-size: 4em; line-height: 50px; margin-left: -30px;"><b>UNDER CONSTRUCTION</b></h2>
-			</div>
-		</div>
-	</div>
+            <div class="col-md-6" id="need-to-poo-map">
+                <div id="map" style="width:100%;height:75%"></div>
+            </div>
+            <div class="col-md-6" id="took-a-poo-map">
+                <img class="washroom-top" src="includes/img/washrooms-logo.png">
+                
+            </div>
+        </div>
+    </div>
 </section>
+
+
+<script>
+function myMap() {
+  var myCenter = new google.maps.LatLng(51.508742,-0.120850);
+  var mapCanvas = document.getElementById("map");
+  var mapOptions = {center: myCenter, zoom: 16};
+  var map = new google.maps.Map(mapCanvas, mapOptions);
+    map.setCenter(new google.maps.LatLng(43.663570, -79.395531), 13);
+    //map.setZoom(50);
+  var marker = new google.maps.Marker({position:myCenter});
+  marker.setMap(map);
+  google.maps.event.addListener(marker,'click',function() {
+    var infowindow = new google.maps.InfoWindow({
+      content:"This location was rated: 4.2 based on 29 ratings."
+    });
+  infowindow.open(map,marker);
+  });
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1zlFVFKWA7O_UY60lpgmn5mRrS4Lmvqg&callback=myMap"></script>
+<!--
+<script>
+      function myMap() {
+          var myCenter = new google.maps.LatLng(51.508742,-0.120850);
+          var mapCanvas = document.getElementById("map");
+          var mapOptions = {center: myCenter, zoom: 16};
+          var map = new google.maps.Map(mapCanvas, mapOptions);
+          map.setCenter(new google.maps.LatLng(43.663570, -79.395531), 13);
+          var marker = new google.maps.Marker({position:myCenter});
+          marker.setMap(map);
+          infowindow.open(map,marker);
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1zlFVFKWA7O_UY60lpgmn5mRrS4Lmvqg&callback=Map">
+    </script>-->
 <script src="includes/js/jquery-1.11.1.min.js"></script>
 <script src="includes/js/owl.carousel.js"></script>
 <script src="includes/js/lightbox.min.js"></script>
