--- a/index-took-poop.html
+++ b/index-took-poop.html
@@ -51,7 +51,9 @@
             </div>
             <div class="col-md-6" id="took-a-poo-map">
                 <img class="washroom-top" src="includes/img/washrooms-logo.png">
-                
+                <div class="washroom-about" style="overflow-y:scroll">
+                    
+                </div>
             </div>
         </div>
     </div>
