--- a/index-took-poop.html
+++ b/index-took-poop.html
@@ -52,7 +52,183 @@
             <div class="col-md-6" id="took-a-poo-map">
                 <img class="washroom-top" src="includes/img/washrooms-logo.png">
                 <div class="washroom-about" style="overflow-y:scroll">
-                    
+                    <button class="accordion">Annesley Hall (AH)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/AN.jpg" alt="" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>95  Queen's Park, M5S 2C7</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/506" title="Click to find this building on the map." class="map_it">Map Annesley Hall</a></dd>
+    </dl>
+    </p>
+</div>
+
+<button class="accordion">Anthropology Building (AR)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/AP.jpg" alt="" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>230  College Street, M5T 1R2</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/506" title="Click to find this building on the map." class="map_it">Map Anthropology Building</a></dd>
+    </dl>
+    </p>
+</div>
+
+<button class="accordion">Architecture Building (AB)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/AR.jpg" alt="" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>230  College Street, M5T 1R2</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/028" title="Click to find this building on the map." class="map_it">Map Architecture Building</a></dd>
+    </dl>
+    </p>
+</div>
+
+<button class="accordion">Astronomy and Astrophysics Building (AB)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/AB.jpg" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>50  St. George Street, M5S 3H4</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/036" title="Click to find this building on the map." class="map_it">Map Astronomy and Astrophysics Building</a></dd>
+    </dl>
+    </p>
+</div>
+
+<button class="accordion">Bahen Centre for Information Technology (BA)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/BA.jpg" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>40 St. George Street, M5S 2E4</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/080" title="Click to find this building on the map." class="map_it">Map Bahen Centre for Information Technology</a></dd>
+    </dl>
+    </p>
+</div>
+
+<button class="accordion">Birge-Carnegie Library (BC)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/BC.jpg" alt="" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>75a   Queen's Park</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/506" title="Click to find this building on the map." class="map_it">Map Birge-Carnegie Library</a></dd>
+    </dl>
+    </p>
+</div>
+
+<button class="accordion">Claude T. Bissell Building (BL)</button>
+<div class="panel">
+    <p>
+        <img src="/http://map.utoronto.ca/_assets/_images/_buildings_pics/BL.jpg" alt="" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>140 St. George Street, M5S 3G6</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/085" title="Click to find this building on the map." class="map_it">Map Claude T. Bissell Building</a></dd>
+    </dl>
+    </p>
+</div>
+
+<button class="accordion">D.L. Pratt Building (DN)</button>
+<div class="panel">
+    <p>
+        <img src="/_assets/_images/_buildings_pics/BC.jpg" alt="" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>124  Edward Street, M5G 1G6</dd>
+        <dd><a href="http://map.utoronto.ca/_assets/_images/_buildings_pics/PT.jpg" title="Click to find this building on the map." class="map_it">Map D.L. Pratt Building</a></dd>
+    </dl>
+    </p>
+</div>
+
+<button class="accordion">Engineering Annex (EA)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/EA.jpg" alt="" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>11 King's College Road, M5S 1A4</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/21" title="Click to find this building on the map." class="map_it">Map Engineering Annex</a></dd>
+    </dl>
+    </p>
+</div>
+
+<button class="accordion">Hart House (HH)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/HH.jpg" alt="" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>7 Hart House Circle, M5S 3H3</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/002" title="Click to find this building on the map." class="map_it">Map Hart House </a></dd>
+    </dl>
+    </p>
+</div>
+<button class="accordion">Anthropology Building (AR)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/AP.jpg" alt="" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>230  College Street, M5T 1R2</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/506" title="Click to find this building on the map." class="map_it">Map Anthropology Building</a></dd>
+    </dl>
+    </p>
+</div>
+<button class="accordion">Bahen Centre for Information Technology (BA)</button>
+<div class="panel">
+    <p>
+        <img src="http://map.utoronto.ca/_assets/_images/_buildings_pics/BA.jpg" />
+        <br />
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+    <dl>
+        <dd>40 St. George Street, M5S 2E4</dd>
+        <dd><a href="http://map.utoronto.ca/utsg/building/080" title="Click to find this building on the map." class="map_it">Map Bahen Centre for Information Technology</a></dd>
+    </dl>
+    </p>
+</div>
                 </div>
             </div>
         </div>
@@ -108,7 +284,22 @@ function myMap() {
 <script src="includes/js/main.js"></script>
 <script src="includes/js/bootstrap.min.js"></script>
 <script src="includes/js/retina.js"></script>
+<script>
+    var acc = document.getElementsByClassName("accordion");
+    var i;
 
+    for (i = 0; i < acc.length; i++) {
+        acc[i].onclick = function(){
+            this.classList.toggle("active");
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "block") {
+                panel.style.display = "none";
+            } else {
+                panel.style.display = "block";
+            }
+        }
+    }
+</script>
 
 </body>
 </html>
