--- a/index-register.html
+++ b/index-register.html
@@ -67,7 +67,7 @@
 		<div class="row">
 			<div class="col-md-3">
             </div>
-            <form action="" method="" class="mail-form">
+            <form action="includes/js/Server.js" method="" class="mail-form">
                 <div class="col-md-6">
                    <div class="row">
                         <div class="col-sm-4">
